# Monaris

./: .gitignore  Monaris.cabal  cabal.project  cabal.project.freeze  stack.yaml
