cabal-version: 2.4
name:          Monaris
version:       0.1.8
synopsis:      A simple tetris clone
description:   A tetris clone written in Haskell.
homepage:      https://github.com/fumieval/Monaris/
license:       BSD-3-Clause
license-file:  LICENSE
author:        Fumiaki Kinishota
maintainer:    fumiexcel@gmail.com
copyright:     Copyright (C) 2012-2017 Fumiaki Kinoshita
category:      Game
build-type:    Simple
data-files:    images/*.png

source-repository head
  type:     git
  location: https://github.com/fumieval/Monaris.git

executable Monaris
  main-is:       Monaris.hs

  -- other-modules:
  ghc-options:   -O2 -Wall
  build-depends:
    , array       ^>=0.5
    , base        ^>=4.12
    , containers  ^>=0.6.2
    , directory   ^>=1.3
    , free        ^>=5.1
    , free-game
    , lens        ^>=4.18
    , mtl         ^>=2.2
